--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <section class="hero">
     <div class="half">
         <div class="left">
-            <img src="./images.jpg" alt="image of men" class="img">
+            <img src="images.jpg" alt="image of men" class="img">
         </div>
 
         <div class="right">
